--- a/automate.yml
+++ b/automate.yml
@@ -1,3 +1,9 @@
 ---
 # version of crosscompute
 crosscompute: 0.9.0
+
+# name of your automation
+name: Send Emails
+
+# version of your automation
+version: 0.0.1
