--- a/automate.yml
+++ b/automate.yml
@@ -7,3 +7,76 @@ name: Send Emails
 
 # version of your automation
 version: 0.0.1
+
+# input configuration
+input:
+
+  # input variables
+  # - id to use when referencing your variable in the template
+  # - view to use when rendering your variable on the display
+  # - path where your script loads the variable,
+  #   relative to the input folder
+  variables:
+    - id: SMTP_URL
+      view: string
+      path: ENVIRONMENT
+    - id: SMTP_PORT
+      view: string
+      path: ENVIRONMENT
+    - id: SMTP_USERNAME
+      view: string
+      path: ENVIRONMENT
+    - id: SMTP_PASSWORD
+      view: password
+      path: ENVIRONMENT
+    - id: source_email
+      view: email
+      path: variables.json
+    - id: subject
+      view: string
+      path: variables.json
+    - id: body
+      view: text
+      path: variables.json
+    - id: contacts
+      view: text
+      path: contacts.csv
+
+# output configuration
+output:
+
+  # output variables
+  # - id to use when referencing your variable in the template
+  # - view to use when rendering your variable on the display
+  # - path where your script saves the variable,
+  #   relative to the output folder
+  variables:
+    - id: messages_sent_count
+      view: number
+      path: variables.json
+    - id: messages_total_count
+      view: number
+      path: variables.json
+
+# batches configuration
+# - folder that contains an input subfolder with paths for
+#   input variables that define a specific batch
+batches:
+  - folder: batches/example
+
+# script configuration
+script:
+
+  # folder where your script should run
+  folder: .
+
+  # command to use to run your script
+  command: python run.py {input_folder} {output_folder}
+
+# environment configuration
+environment:
+
+  # environment variables
+  # - id of the environment variable to make available to your script
+  variables:
+    - id: ATTACHMENTS_FOLDER
