--- a/automate.yml
+++ b/automate.yml
@@ -42,6 +42,9 @@ input:
       view: text
       path: contacts.csv
 
+  templates:
+    - path: form.md
+
 # output configuration
 output:
 
@@ -57,6 +60,9 @@ output:
     - id: messages_total_count
       view: number
       path: variables.dictionary
+
+  templates:
+    - path: result.md
 
 # batches configuration
 # - folder that contains an input subfolder with paths for
@@ -80,3 +86,11 @@ environment:
   # - id of the environment variable to make available to your script
   variables:
     - id: ATTACHMENTS_FOLDER
+
+# display configuration
+display:
+
+  # styles configuration
+  # - path to CSS stylesheet that will be used to render your templates
+  styles:
+    - path: style.css
