--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-*.swp
+# vim
+*.sw[op]
+*~
+# python
+*.egg*
+*.py[co]
+.cache
+.coverage
+.ipynb_checkpoints
+.pytest_cache
+.tox
+__pycache__
+build/
+dist/
+# transient
+*.log
+*.tmp
+*_data
+.DS_Store
+# data
+*.png
+debug/
 runs/
